--- a/VideoConferenceBoost/VideoConferenceBoost.vcxproj.filters
+++ b/VideoConferenceBoost/VideoConferenceBoost.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="MicrophoneStream.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="IPacketEndpoint.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="PacketRouter.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PacketTransceiver.h">
@@ -39,6 +45,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="MicrophoneStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="IPacketEndpoint.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketRouter.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
