--- a/VideoConferenceBoost/VideoConferenceBoost.vcxproj.filters
+++ b/VideoConferenceBoost/VideoConferenceBoost.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="VideoStream.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="IPacketRouter.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ExceptionTransporter.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PacketTransceiver.h">
@@ -63,6 +69,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="VideoStream.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="IPacketRouter.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="ExceptionTransporter.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
