moved main.cpp to Client class

--- a/VideoConferenceBoost/VideoConferenceBoost.vcxproj
+++ b/VideoConferenceBoost/VideoConferenceBoost.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="GUIButton.cpp" />
     <ClCompile Include="GUIElement.cpp" />
     <ClCompile Include="GUITextField.cpp" />
@@ -164,6 +165,7 @@
     <ClCompile Include="VideoStream.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
     <ClInclude Include="GUIButton.h" />
     <ClInclude Include="GUIElement.h" />
     <ClInclude Include="GUITextField.h" />
