--- a/VideoConferenceBoostServer/VideoConferenceBoostServer.vcxproj
+++ b/VideoConferenceBoostServer/VideoConferenceBoostServer.vcxproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PacketRouter.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PacketRouter.h" />
+    <ClInclude Include="Server.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VideoConferenceBoostLib\VideoConferenceBoostLib.vcxproj">
