--- a/VideoConferenceBoostServer/VideoConferenceBoostServer.vcxproj.filters
+++ b/VideoConferenceBoostServer/VideoConferenceBoostServer.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="PacketRouter.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Server.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PacketRouter.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Server.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
